--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<html>
 <head>
   <title>SOFWERX on GitHub</title>
 </head>
 <body>
   <h1>SOFWERX</h1>
-
+  <a href="https://github.com/sofwerx/>SOFERX on GitHub</a>
 </body>
+</html>
