--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 </head>
 <body>
   <h1>SOFWERX</h1>
-  <a href="https://github.com/sofwerx/>SOFERX on GitHub</a>
+  <p>
+  <a href="https://github.com/sofwerx/>SOFWERX on GitHub</a>
+  </p>
 </body>
 </html>
