--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <title>SOFWERX on GitHub</title>
 </head>
 <body>
+  <nav>
+    <ul>
+       <li><a href="https://github.com/sofwerx">SOFWERX on GitHub</a></li>
+	     <li><a href="https://github.com/orgs/sofwerx/teams/geo/repositories">Geospatial</a></li>
+	     <li><a href="https://github.com/orgs/sofwerx/teams/data_science/repositories">Data Science</a></li>
+       <li><a href="https://github.com/orgs/sofwerx/teams/devops/repositories">DevOps</a></li>
+    	</ul>
+		</nav>
   <h1>SOFWERX</h1>
   <p>
   <a href="https://github.com/sofwerx/>SOFWERX on GitHub</a>
