--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <title>SOFWERX on GitHub</title>
 </head>
 <body>
+  <h1>SOFWERX</h1>
   <nav>
     <ul>
-       <li><a href="https://github.com/sofwerx">SOFWERX on GitHub</a></li>
-	     <li><a href="https://github.com/orgs/sofwerx/teams/geo/repositories">Geospatial</a></li>
-	     <li><a href="https://github.com/orgs/sofwerx/teams/data_science/repositories">Data Science</a></li>
-       <li><a href="https://github.com/orgs/sofwerx/teams/devops/repositories">DevOps</a></li>
-    	</ul>
-		</nav>
-  <h1>SOFWERX</h1>
+      <li><a href="https://github.com/sofwerx">SOFWERX on GitHub</a></li>
+      <li><a href="https://github.com/orgs/sofwerx/teams/geo/repositories">Geospatial</a></li>
+      <li><a href="https://github.com/orgs/sofwerx/teams/data_science/repositories">Data Science</a></li>
+      <li><a href="https://github.com/orgs/sofwerx/teams/devops/repositories">DevOps</a></li>
+    </ul>
+  </nav>
   <p>
-  <a href="https://github.com/sofwerx/>SOFWERX on GitHub</a>
+    <a href="https://github.com/sofwerx/>SOFWERX on GitHub"</a>
   </p>
 </body>
 </html>
