Changed the title for the Zero Trust Network listing to match the actual title of the paper.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <p>
         <div class="spacer"></div>
-        <div class="pub-title">Zero Trust Network</div>
+        <div class="pub-title">Building a Zero Trust Network with Open Source and Community Version Software</div>
         <div class="pub-authors">Jim Ladd</div>
         <div class="pub-date">May 13, 2020</div>
         <div class="spacer"></div>
