Added the irsend2 whitepaper.

--- a/index.html
+++ b/index.html
@@ -15,23 +15,40 @@
             </a>
         </div>
     </header>
+    
+    <p>
+      <div class="pub-title">Infrared Transmit Validation for the Raspberry Pi</div>
+      <div class="pub-authors">Rob Simon & Jim Ladd</div>
+      <div class="pub-date">August 11, 2020</div>
+      <div class="spacer"></div>
+      <div class="pub-description">A recent project at SOFWERX relied on IR to remotely control a target 
+        device. In theory, the approach was attractive but, in practice, the original version proved to 
+        be unreliable.  This paper describes an approach to increase the stability of this type of computer 
+        interface by validating the IR signal transmission using python custom code and the Linux Infrared 
+        Remote Control (LIRC) software.
+      </div>
+      <div class="spacer"></div>
+      <div><a href="https://sofwerx.github.io/docs/IRSendValidation.pdf">See the publication</a></div>
+      <div class="spacer"></div>
+      <hr class="vertical-line"></hr>
+    </p>
 
     <p>
-    <div class="pub-title">ATAK Low Latency Camera Platform (ALLCaP)</div>
-    <div class="pub-authors">Jason Young & Jim Ladd</div>
-    <div class="pub-date">July 29, 2020</div>
-    <div class="spacer"></div>
-    <div class="pub-description">The ATAK Low Latency Camera Platform (ALLCaP) is a proof of concept
-        that provides near real-time video display. The viewing device is an ATAK enabled tablet or
-        phone while the video source is a USB-based camera or another ATAK enabled device.  This
-        approach does not rely on signaling, discovery, or intermediary servers and can be used
-        with Wi-Fi or software defined radio (SDR) radios.  The project uses the Android Tactical
-        Awareness Kit, UV4L, and webrtc-streamer software.
-    </div>
-    <div class="spacer"></div>
-    <div><a href="https://sofwerx.github.io/docs/ALLCaP.pdf">See the publication</a></div>
-    <div class="spacer"></div>
-    <hr class="vertical-line"></hr>
+      <div class="pub-title">ATAK Low Latency Camera Platform (ALLCaP)</div>
+      <div class="pub-authors">Jason Young & Jim Ladd</div>
+      <div class="pub-date">July 29, 2020</div>
+      <div class="spacer"></div>
+      <div class="pub-description">The ATAK Low Latency Camera Platform (ALLCaP) is a proof of concept
+          that provides near real-time video display. The viewing device is an ATAK enabled tablet or
+          phone while the video source is a USB-based camera or another ATAK enabled device.  This
+          approach does not rely on signaling, discovery, or intermediary servers and can be used
+          with Wi-Fi or software defined radio (SDR) radios.  The project uses the Android Tactical
+          Awareness Kit, UV4L, and webrtc-streamer software.
+      </div>
+      <div class="spacer"></div>
+      <div><a href="https://sofwerx.github.io/docs/ALLCaP.pdf">See the publication</a></div>
+      <div class="spacer"></div>
+      <hr class="vertical-line"></hr>
     </p>
 
     <p>
