--- a/index.html
+++ b/index.html
@@ -15,7 +15,25 @@
             </a>
         </div>
     </header>
-    
+
+    <p>
+    <div class="pub-title">First Steps Toward CI/CD with WordPress, Cloudflare, and GitHub</div>
+    <div class="pub-authors">Lewis Morgan, Patrick Schippers, & Jim Ladd</div>
+    <div class="pub-date">December 29, 2020</div>
+    <div class="spacer"></div>
+    <div class="pub-description">Continuous Integration/Continuous Development (CI/CD) processes have been at the forefront of the
+        software development industry for several years now. While CI/CD concepts are easy to grasp, they can
+        be difficult to implement while maintaining schedules and achieving milestones. This paper describes
+        our initial steps toward a CI/CD pipeline for our client facing websites that use WordPress and
+        Cloudflare. We incorporate GitHub’s repository to maintain our source code while using GitHub’s
+        Actions service to automate the deployment to a staging environment hosted by Cloudflare.
+    </div>
+    <div class="spacer"></div>
+    <div><a href="https://sofwerx.github.io/docs/WordPressCICD.pdf">See the publication</a></div>
+    <div class="spacer"></div>
+    <hr class="vertical-line"></hr>
+    </p>
+
     <p>
       <div class="pub-title">Infrared Transmit Validation for the Raspberry Pi</div>
       <div class="pub-authors">Rob Simon & Jim Ladd</div>
