Added the Clockwerx paper.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,24 @@
     </header>
 
     <p>
+    <div class="pub-title">React and Flask Stacks for Docker on the Raspberry Pi</div>
+    <div class="pub-authors">Jim Ladd</div>
+    <div class="pub-date">January 12, 2021</div>
+    <div class="spacer"></div>
+    <div class="pub-description">The Clockwerx project started with the desire to program a set of wall mounted clocks via a web
+        application. After a false start, the architecture was refactored to include a web application based on a
+        React stack to provide a user interface. A web service based on a Flask stack was selected to provide the
+        interface to the clock display mechanism. Both of these services are embedded in Docker containers
+        and hosted on a Raspberry Pi computer. This document presents an overview of the architecture and
+        several tips and details for building out a similar system.
+    </div>
+    <div class="spacer"></div>
+    <div><a href="https://sofwerx.github.io/docs/react-flask-stacks-rpi.pdf">See the publication</a></div>
+    <div class="spacer"></div>
+    <hr class="vertical-line"></hr>
+    </p>
+
+    <p>
     <div class="pub-title">First Steps Toward CI/CD with WordPress, Cloudflare, and GitHub</div>
     <div class="pub-authors">Lewis Morgan, Patrick Schippers, & Jim Ladd</div>
     <div class="pub-date">December 29, 2020</div>
