Changed the Tactical to Team in ATAK .

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           that provides near real-time video display. The viewing device is an ATAK enabled tablet or
           phone while the video source is a USB-based camera or another ATAK enabled device.  This
           approach does not rely on signaling, discovery, or intermediary servers and can be used
-          with Wi-Fi or software defined radio (SDR) radios.  The project uses the Android Tactical
+          with Wi-Fi or software defined radio (SDR) radios.  The project uses the Android Team
           Awareness Kit, UV4L, and webrtc-streamer software.
       </div>
       <div class="spacer"></div>
