Added the serverless paper.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,24 @@
     </header>
 
     <p>
+    <div class="pub-title">Fast Path to AWS Serverless Applications</div>
+    <div class="pub-authors">Sakina Shaikh & Jim Ladd</div>
+    <div class="pub-date">May 12, 2021</div>
+    <div class="spacer"></div>
+    <div class="pub-description">This project presents a serverless implementation of a notes management application.
+        We started with the example from Serverless Stack guide and evolved it to fit our requirements.  The client
+        project uses Nodejs, React, Amplify, and CloudFront while the service project utilizes Cognito, API Gateway,
+        Lambda, DynamoDB, and Python. The two projects are maintained in GitLab and uses its CI/CD pipeline feature.
+        This project deviated from the Serverless Stack guide in the use of GitLab instead of GitHub and Python instead
+        of Nodejs for the Lambda language.
+    </div>
+    <div class="spacer"></div>
+    <div><a href="https://sofwerx.github.io/docs/ServerlessStackApp.pdf">See the publication</a></div>
+    <div class="spacer"></div>
+    <hr class="vertical-line"></hr>
+    </p>
+
+    <p>
     <div class="pub-title">React and Flask Stacks for Docker on the Raspberry Pi</div>
     <div class="pub-authors">Jim Ladd</div>
     <div class="pub-date">January 12, 2021</div>
