Corrected a grammer error.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="pub-date">May 12, 2021</div>
     <div class="spacer"></div>
     <div class="pub-description">This project presents a serverless implementation of a notes management application.
-        We started with the example from Serverless Stack guide and evolved it to fit our requirements.  The client
+        We started with the example from the Serverless Stack guide and evolved it to fit our requirements.  The client
         project uses Nodejs, React, Amplify, and CloudFront while the service project utilizes Cognito, API Gateway,
         Lambda, DynamoDB, and Python. The two projects are maintained in GitLab and uses its CI/CD pipeline feature.
         This project deviated from the Serverless Stack guide in the use of GitLab instead of GitHub and Python instead
