Added the PAT architecture document.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
     </header>
 
     <p>
+    <div class="pub-title">Heterogeneous Architecture for the Physiological Analysis Tool</div>
+    <div class="pub-authors">Jim Ladd, Hansel Rios, & Jason Young</div>
+    <div class="pub-date">May 20, 2021</div>
+    <div class="spacer"></div>
+    <div class="pub-description">The Physiological Analysis Tool (PAT) was a recent proof-of-concept project 
+        at SOFWERX that explored the limits of hosting multiple physiological and sentiment analysis systems
+        on an on-body computing platform.  Five different sentiment-based systems along with three physiological 
+        measurement tools were incorporated into a system that can concurrently analyze the same event.  
+        To accommodate this wide spectrum of technologies, a heterogeneous platform was developed that integrates 
+        Android, Ubuntu, and Windows computing environments with two point-to-point cable-based connections.   
+        The architecture of this system is presented in this document.
+    </div>
+    <div class="spacer"></div>
+    <div><a href="https://sofwerx.github.io/docs/PAT-Architecture-v1_4.pdf">See the publication</a></div>
+    <div class="spacer"></div>
+    <hr class="vertical-line"></hr>
+    </p>
+
+    <p>
     <div class="pub-title">Fast Path to AWS Serverless Applications</div>
     <div class="pub-authors">Sakina Shaikh & Jim Ladd</div>
     <div class="pub-date">May 12, 2021</div>
