Added the CAC in the Cloud whitepaper.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
     </header>
 
     <p>
+    <div class="pub-title">CAC in the Cloud</div>
+    <div class="pub-authors">Jim Ladd</div>
+    <div class="pub-date">July 16, 2021</div>
+    <div class="spacer"></div>
+    <div class="pub-description">The Common Access Card (CAC) is a “smart” card and provides standard
+      identification for active and reserve military personnel, Department of Defense civilian employees,
+      and eligible contractors.  The paper describes three cloud-based architectures that were developed
+      to integrate the CAC in the security service of a web application.  The first two versions relied
+      on NGINX, Docker, and AWS Elastic Container Service (ECS).  The latest version is based on AWS
+      serverless stack including API Gateway, Lambda, and S3.  All of the versions used GitLab and
+      its CI/CD pipeline service.
+    </div>
+    <div class="spacer"></div>
+    <div><a href="https://sofwerx.github.io/docs/CACInTheCloud.pdf">See the publication</a></div>
+    <div class="spacer"></div>
+    <hr class="vertical-line"></hr>
+    </p>
+
+    <p>
     <div class="pub-title">Heterogeneous Architecture for the Physiological Analysis Tool</div>
     <div class="pub-authors">Jim Ladd, Hansel Rios, & Jason Young</div>
     <div class="pub-date">May 20, 2021</div>
