Added the AWS Serverless Patterns - S3 document.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,25 @@
     </header>
 
     <p>
+    <div class="pub-title">AWS Serverless Patterns – S3</div>
+    <div class="pub-authors">Ivan Castanon & Jim Ladd</div>
+    <div class="pub-date">July 22, 2021</div>
+    <div class="spacer"></div>
+    <div class="pub-description">While the solution space for software development is constantly
+      updated with new technologies, the requirements and artifacts of the problem space can
+      appear to be timeless. Even with cutting edge technologies like the AWS serverless stack,
+      software developers are still burden with vintage entities like document and image files.
+      The patterns presented in this paper cover uploading documents to a private S3 bucket by
+      multiple users, allowing read access to a subset of the user population, and manipulating
+      the documents in a serverless realm.
+    </div>
+    <div class="spacer"></div>
+    <div><a href="https://sofwerx.github.io/docs/AWSServerlessPatterns-S3.pdf">See the publication</a></div>
+    <div class="spacer"></div>
+    <hr class="vertical-line"></hr>
+    </p>
+
+    <p>
     <div class="pub-title">CAC in the Cloud</div>
     <div class="pub-authors">Jim Ladd</div>
     <div class="pub-date">July 16, 2021</div>
