Added the API integrations paper.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,24 @@
     </header>
 
     <p>
+    <div class="pub-title">Accelerators for Web API Integration Development </div>
+    <div class="pub-authors">Austin Alkire & Jim Ladd</div>
+    <div class="pub-date">August 5, 2021</div>
+    <div class="spacer"></div>
+    <div class="pub-description">In this paper, we present a set of recommendations with
+      the goal of accelerating the development of integrations with web-based interfaces.
+      These accelerators were constructed over decades of system integration experience
+      and recently re-validated on a real-world project.  While the focus of this effort
+      was on integration development, most of the accelerators can be applied on other
+      types of software development.
+    </div>
+    <div class="spacer"></div>
+    <div><a href="https://sofwerx.github.io/docs/API-Integrations.pdf">See the publication</a></div>
+    <div class="spacer"></div>
+    <hr class="vertical-line"></hr>
+    </p>
+
+    <p>
     <div class="pub-title">AWS Serverless Patterns – S3</div>
     <div class="pub-authors">Ivan Castanon & Jim Ladd</div>
     <div class="pub-date">July 22, 2021</div>
