--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <p>
     <div class="pub-title">Heterogeneous Architecture for the Physiological Analysis Tool</div>
-    <div class="pub-authors">Jim Ladd, Hansel Rios, & Jason Young</div>
+    <div class="pub-authors">Jim Ladd, Hansel Rios Torres, & Jason Young</div>
     <div class="pub-date">May 20, 2021</div>
     <div class="spacer"></div>
     <div class="pub-description">The Physiological Analysis Tool (PAT) was a recent proof-of-concept project 
